Fixing SSLv3 "poodle" vulnerability
Change-Id: I322dc45b99c8c18f4671fb492dcbf916978bbf48

--- a/puppet/modules/jenkins_config/templates/jenkins.vhost.erb
+++ b/puppet/modules/jenkins_config/templates/jenkins.vhost.erb
@@ -33,6 +33,7 @@
              CustomLog ${APACHE_LOG_DIR}/<%= scope.lookupvar("::jenkins_config::master::vhost_name") %>-ssl-access.log combined
 
              SSLEngine on
+             SSLProtocol all -SSLv2 -SSLv3
 
              SSLCertificateFile      <%= scope.lookupvar("::jenkins_config::master::ssl_cert_file") %>
              SSLCertificateKeyFile   <%= scope.lookupvar("::jenkins_config::master::ssl_key_file") %>
