--- a/puppet/modules/etherpad_config/templates/etherpadlite.vhost.erb
+++ b/puppet/modules/etherpad_config/templates/etherpadlite.vhost.erb
@@ -39,6 +39,7 @@
   CustomLog ${APACHE_LOG_DIR}/<%= scope.lookupvar("etherpad_config::apache::vhost_name") %>-ssl-access.log combined
 
   SSLEngine on
+  SSLProtocol all -SSLv2 -SSLv3
 
   SSLCertificateFile      <%= scope.lookupvar("etherpad_config::apache::ssl_cert_file") %>
   SSLCertificateKeyFile   <%= scope.lookupvar("etherpad_config::apache::ssl_key_file") %>
